fix(ui/image-preview): fix flickering when swiping quickly and optimize swipe initialIndex behavior and close #1020

--- a/packages/varlet-ui/src/image-preview/imagePreview.less
+++ b/packages/varlet-ui/src/image-preview/imagePreview.less
@@ -13,7 +13,7 @@
 .var-image-preview {
   &__popup[var-image-preview-cover] {
     height: 100%;
-    background: transparent;
+    background: var(--image-preview-zoom-container-background);
   }
 
   &__swipe[var-image-preview-cover] {
@@ -62,6 +62,5 @@
     width: 100vw;
     height: 100%;
     transition: transform 0.2s;
-    background: var(--image-preview-zoom-container-background);
   }
 }
